fix – quote sizing on mobile inside cover

--- a/src/scss/framework/components/_cards.scss
+++ b/src/scss/framework/components/_cards.scss
@@ -137,12 +137,25 @@
   padding: clamp(calc($spacer * 2), 3%, calc($spacer * 5))
     clamp(calc($spacer * 2), 3%, calc($spacer * 5))
     clamp(calc($spacer * 2.5), 3%, calc($spacer * 5.5));
-  margin: 0 auto;
+  margin: $spacer auto;
   @media screen and (min-width: 500px) {
     margin: 0 0 0 2vw;
   }
+  &.push-card-down {
+    @media screen and (max-width: 800px) {
+      margin-top: 0;
+      margin-top: 80vw;
+      margin-bottom: 4rem;
+    }
+  }
 }
 
+.space-above {
+  margin-top: 5rem;
+  @media screen and (min-width: 800px) {
+    margin-top: 10rem;
+  }
+}
 .max-content-600 {
   max-width: 600px;
 }
