--- a/src/scss/framework/styles/_typography.scss
+++ b/src/scss/framework/styles/_typography.scss
@@ -252,13 +252,6 @@ section[class^='PageTitle_hero'] {
   position: sticky;
 }
 
-.space-above {
-  margin-top: 5rem;
-  @media screen and (min-width: 800px) {
-    margin-top: 10rem;
-  }
-}
-
 .text-data {
   font-size: $h1-font-size;
   font-weight: $font-weight-bolder;
